--- a/docs/tensorflow/micro_speech_with_lstm_op.ipynb
+++ b/docs/tensorflow/micro_speech_with_lstm_op.ipynb
@@ -140,7 +140,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 115,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -153,25 +153,28 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "mkdir: cannot create directory ‘/content/data/mini_speech_commands/unknown’: File exists\n",
-            "mv: cannot stat '/content/data/mini_speech_commands/down/*': No such file or directory\n",
-            "rm: cannot remove '/content/data/mini_speech_commands/down': No such file or directory\n",
-            "mv: cannot stat '/content/data/mini_speech_commands/go/*': No such file or directory\n",
-            "rm: cannot remove '/content/data/mini_speech_commands/go': No such file or directory\n",
-            "mv: cannot stat '/content/data/mini_speech_commands/left/*': No such file or directory\n",
-            "rm: cannot remove '/content/data/mini_speech_commands/left': No such file or directory\n",
-            "mv: cannot stat '/content/data/mini_speech_commands/right/*': No such file or directory\n",
-            "rm: cannot remove '/content/data/mini_speech_commands/right': No such file or directory\n",
-            "mv: cannot stat '/content/data/mini_speech_commands/stop/*': No such file or directory\n",
-            "rm: cannot remove '/content/data/mini_speech_commands/stop': No such file or directory\n",
-            "mv: cannot stat '/content/data/mini_speech_commands/up/*': No such file or directory\n",
-            "rm: cannot remove '/content/data/mini_speech_commands/up': No such file or directory\n",
-            "rm: cannot remove '/content/data/mini_speech_commands/README.md': No such file or directory\n",
-            "3311\n"
+            "mkdir: /content: No such file or directory\n",
+            "mkdir: /content/data/mini_speech_commands: No such file or directory\n",
+            "mv: rename /content/data/mini_speech_commands/down/* to /content/data/mini_speech_commands/unknown: No such file or directory\n",
+            "rm: /content/data/mini_speech_commands/down: No such file or directory\n",
+            "mv: rename /content/data/mini_speech_commands/go/* to /content/data/mini_speech_commands/unknown: No such file or directory\n",
+            "rm: /content/data/mini_speech_commands/go: No such file or directory\n",
+            "mv: rename /content/data/mini_speech_commands/left/* to /content/data/mini_speech_commands/unknown: No such file or directory\n",
+            "rm: /content/data/mini_speech_commands/left: No such file or directory\n",
+            "mv: rename /content/data/mini_speech_commands/right/* to /content/data/mini_speech_commands/unknown: No such file or directory\n",
+            "rm: /content/data/mini_speech_commands/right: No such file or directory\n",
+            "mv: rename /content/data/mini_speech_commands/stop/* to /content/data/mini_speech_commands/unknown: No such file or directory\n",
+            "rm: /content/data/mini_speech_commands/stop: No such file or directory\n",
+            "mv: rename /content/data/mini_speech_commands/up/* to /content/data/mini_speech_commands/unknown: No such file or directory\n",
+            "rm: /content/data/mini_speech_commands/up: No such file or directory\n",
+            "rm: /content/data/mini_speech_commands/README.md: No such file or directory\n",
+            "ls: /content/data/mini_speech_commands/unknown: No such file or directory\n",
+            "       0\n"
           ]
         }
       ],
       "source": [
+        "!mkdir /content/keras_lstm\n",
         "# comment out below line if \"unknown\" directory already exists\n",
         "!mkdir /content/data/mini_speech_commands/unknown\n",
         "# moves files from their specific commands directory to the \"unknown\" directory (replaces all files with an existing name therefore example set is smaller)\n",
@@ -1359,7 +1362,7 @@
         "id": "NNPrzNrcDqq8"
       },
       "source": [
-        "##Run TF inference on multiple audio files"
+        "## Run TF inference on multiple audio files"
       ]
     },
     {
@@ -1900,7 +1903,7 @@
         "id": "E8IcErTDyudr"
       },
       "source": [
-        "##Generate TF Lite float32 model"
+        "## Generate TF Lite float32 model"
       ]
     },
     {
@@ -1984,7 +1987,7 @@
         "id": "6lo_G30v0raq"
       },
       "source": [
-        "##Validate audio files using TFLite float32 model"
+        "## Validate audio files using TFLite float32 model"
       ]
     },
     {
@@ -2167,7 +2170,7 @@
         "id": "HX4Ib7o4-kcH"
       },
       "source": [
-        "##Validate Quantized int8 model"
+        "## Validate Quantized int8 model"
       ]
     },
     {
@@ -2304,7 +2307,7 @@
         "id": "qg8U2AZkSfCH"
       },
       "source": [
-        "##Evaluate int8 model using floor and inputscale and zeropoint"
+        "## Evaluate int8 model using floor and inputscale and zeropoint"
       ]
     },
     {
@@ -2523,7 +2526,7 @@
         "id": "tUToqbr-OqKp"
       },
       "source": [
-        "##Generate a TensorFlow Lite for MicroControllers Model\n",
+        "## Generate a TensorFlow Lite for MicroControllers Model\n",
         "Convert the TensorFlow Lite model into a C source file that can be loaded by TensorFlow Lite for Microcontrollers."
       ]
     },
@@ -2580,7 +2583,15 @@
       "name": "python3"
     },
     "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
       "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
       "version": "3.9.6"
     }
   },
