tensorflow cat model

--- a/docs/tensorflow/micro_speech_with_lstm_op.ipynb
+++ b/docs/tensorflow/micro_speech_with_lstm_op.ipynb
@@ -2567,7 +2567,8 @@
         "# Install xxd if it is not available\n",
         "!apt-get update && apt-get -qq install xxd\n",
         "# Convert to a C source file\n",
-        "!xxd -i /content/keras_lstm/model_quantized_minispeech.tflite > /content/keras_lstm/model.cc\n"
+        "!xxd -i /content/keras_lstm/model_quantized_minispeech.tflite > /content/keras_lstm/model.cc\n",
+        "!cat /content/keras_lstm/model.cc"
       ]
     }
   ],
