--- a/docs/tensorflow/micro_speech_with_lstm_op.ipynb
+++ b/docs/tensorflow/micro_speech_with_lstm_op.ipynb
@@ -2111,7 +2111,7 @@
         "    # Increase precision of presented data for better side-by-side comparison\n",
         "    tflite_pred_dataframe = pd.DataFrame(tflite_float_model_predictions)\n",
         "    tflite_pred_dataframe.columns = commands\n",
-        "    pd.set_option(\"precision\",1)\n",
+        "    pd.set_option(\"display.precision\",1)\n",
         "    print(tflite_pred_dataframe)\n"
       ]
     },
