--- a/docs/tensorflow/train_micro_speech_model.ipynb
+++ b/docs/tensorflow/train_micro_speech_model.ipynb
@@ -386,7 +386,7 @@
       },
       "outputs": [],
       "source": [
-        "with tf.Session() as sess:\n",
+        "with tf.compat.v1.Session() as sess:\n",
         "  float_converter = tf.lite.TFLiteConverter.from_saved_model(SAVED_MODEL)\n",
         "  float_tflite_model = float_converter.convert()\n",
         "  float_tflite_model_size = open(FLOAT_MODEL_TFLITE, \"wb\").write(float_tflite_model)\n",
@@ -394,8 +394,8 @@
         "\n",
         "  converter = tf.lite.TFLiteConverter.from_saved_model(SAVED_MODEL)\n",
         "  converter.optimizations = [tf.lite.Optimize.DEFAULT]\n",
-        "  converter.inference_input_type = tf.lite.constants.INT8\n",
-        "  converter.inference_output_type = tf.lite.constants.INT8\n",
+        "  converter.inference_input_type = tf.compat.v1.lite.constants.INT8\n",
+        "  converter.inference_output_type = tf.compat.v1.lite.constants.INT8\n",
         "  def representative_dataset_gen():\n",
         "    for i in range(100):\n",
         "      data, _ = audio_processor.get_data(1, i*1, model_settings,\n",
