--- a/jupyter/JupyterEffects.ipynb
+++ b/jupyter/JupyterEffects.ipynb
@@ -12,7 +12,11 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "eef94f0e-c0f2-470f-a278-7ca38e0ad21a",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "c++"
+    }
+   },
    "outputs": [],
    "source": [
     "#pragma cling add_include_path(\"/Users/pschatzmann/Dev/Arduino/libraries/arduino-audio-tools/src\")\n",
@@ -32,7 +36,11 @@
    "cell_type": "code",
    "execution_count": 20,
    "id": "03f4c4fc-915a-4ef3-b477-fa62b2559428",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "c++"
+    }
+   },
    "outputs": [],
    "source": [
     "SineWaveGenerator<int16_t> sine;\n",
@@ -49,7 +57,11 @@
    "cell_type": "code",
    "execution_count": 21,
    "id": "fd2d5b2d-aa94-4ef0-9dc9-63a0bf5a2b0d",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "c++"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -71,7 +83,11 @@
    "cell_type": "code",
    "execution_count": 14,
    "id": "ff376d85-344a-4b65-aad6-2cca5a14f65f",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "c++"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -97,7 +113,11 @@
    "cell_type": "code",
    "execution_count": 15,
    "id": "19b30288-fafe-4cf2-bd3c-a688392b205c",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "c++"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -123,7 +143,11 @@
    "cell_type": "code",
    "execution_count": 16,
    "id": "730b9099-5063-430a-8896-8637ee170cd5",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "c++"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -149,7 +173,11 @@
    "cell_type": "code",
    "execution_count": 17,
    "id": "38655a60-c89a-4db6-9939-07dbb96006e3",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "c++"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -175,7 +203,11 @@
    "cell_type": "code",
    "execution_count": 18,
    "id": "628a39b2-76cb-4ec8-8f41-0f33c3a6adf6",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "c++"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -201,7 +233,11 @@
    "cell_type": "code",
    "execution_count": 19,
    "id": "ca34946c-b8e3-4e7a-8a74-c8fc9d302327",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "c++"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -227,7 +263,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "c0fd2ca5-d7cf-4055-9177-bd9dc81e27bb",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "c++"
+    }
+   },
    "outputs": [],
    "source": []
   },
@@ -235,7 +275,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "dd03ca83-d3d1-47fb-9a46-76671b7fcf5b",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "c++"
+    }
+   },
    "outputs": [],
    "source": []
   },
@@ -243,7 +287,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "19458578-0caa-4496-b4df-8f51100982c5",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "c++"
+    }
+   },
    "outputs": [],
    "source": []
   },
@@ -251,7 +299,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "ebafcba5-7dbb-4b7b-914b-9dac36492d80",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "c++"
+    }
+   },
    "outputs": [],
    "source": []
   }
@@ -266,7 +318,7 @@
    "codemirror_mode": "text/x-c++src",
    "file_extension": ".cpp",
    "mimetype": "text/x-c++src",
-   "name": "c++",
+   "name": "C++17",
    "version": "17"
   },
   "widgets": {
