--- a/jupyter/FFT.ipynb
+++ b/jupyter/FFT.ipynb
@@ -51,7 +51,7 @@
     "\n",
     "// display fft result\n",
     "void handleFftResult(AudioFFTBase &fft) {\n",
-    "  int diff;\n",
+    "  float diff;\n",
     "  auto result = fft.result();\n",
     "  if (result.magnitude > 100) {\n",
     "    Serial.print(result.frequency);\n",
