--- a/docs/tensorflow/train_micro_speech_model.ipynb
+++ b/docs/tensorflow/train_micro_speech_model.ipynb
@@ -435,7 +435,7 @@
         "def run_tflite_inference(tflite_model_path, model_type=\"Float\"):\n",
         "  # Load test data\n",
         "  np.random.seed(0) # set random seed for reproducible test results.\n",
-        "  with tf.Session() as sess:\n",
+        "  with tf.compat.v1.Session() as sess:\n",
         "    test_data, test_labels = audio_processor.get_data(\n",
         "        -1, 0, model_settings, BACKGROUND_FREQUENCY, BACKGROUND_VOLUME_RANGE,\n",
         "        TIME_SHIFT_MS, 'testing', sess)\n",
