--- a/jupyter/Jupyter.ipynb
+++ b/jupyter/Jupyter.ipynb
@@ -265,8 +265,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "c684b4ec-f56f-481a-923b-a834d5d8f979",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "BitVector bits(160);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "8de172e1-e341-4b01-a843-696e6b9e4a8a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000"
+     ]
+    }
+   ],
+   "source": [
+    "cout << bits;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "a10e5c44-5d40-40be-bb03-42536a553f0f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bits.toInt<uint16_t>(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "710d17a0-137f-4b06-afb3-bd9b4f111108",
    "metadata": {},
    "outputs": [],
    "source": []
